[gd_scene load_steps=7 format=3 uid="uid://c2mm4bhx25d8g"]

[ext_resource type="Script" uid="uid://bxuhrlja233aw" path="res://UserInterface/victory_layer.gd" id="1_6k6vd"]
[ext_resource type="FontFile" uid="uid://6iqeuorratwg" path="res://Assets/Jost-VariableFont_wght.ttf" id="2_o6yni"]
[ext_resource type="Texture2D" uid="uid://beyk2yyanse4c" path="res://Assets/star.png" id="2_rt5eh"]

[sub_resource type="Theme" id="Theme_o6yni"]
default_font = ExtResource("2_o6yni")

[sub_resource type="LabelSettings" id="LabelSettings_veim5"]
font_size = 96

[sub_resource type="LabelSettings" id="LabelSettings_rt5eh"]
font_size = 32

[node name="VictoryLayer" type="CanvasLayer"]
script = ExtResource("1_6k6vd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_o6yni")

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "YOU WON!"
label_settings = SubResource("LabelSettings_veim5")

[node name="StarHBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Star1TextureRect" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarHBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_rt5eh")
expand_mode = 2
stretch_mode = 5

[node name="Star2TextureRect" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarHBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_rt5eh")
expand_mode = 2
stretch_mode = 5

[node name="Star3TextureRect" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarHBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_rt5eh")
expand_mode = 2
stretch_mode = 5

[node name="Explanation" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Survive: 1 Star
Full Health: 1 Star
150+ Gold Remaining: 1 Star"
label_settings = SubResource("LabelSettings_rt5eh")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Quit
"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
